--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ p {font-family:Helvetica, sans-serif;font-size:14px;font-style:normal;font-weigh
 <p>Thanks for using my card!  If your card has a metal connector on it, read on for a description of how to use the advanced features of your card.</p>
 <p></p>
 <p>If you're just here for my contact info, here's a virtual contact card (sorry for not just having my contact info here on the page but it causes spam calls for me).</p>
-<p><a href="vcard.vcf">Download .vcf"</a></p>
+<p><a href="vcard.vcf">Download .vcf</a></p>
 <p></p>
 <p>If anything about the card you received seems cool and you'd like to discuss the more advanced features, just let me know and I'll be happy to talk to you about it or send you a fully populated board if you don't have one already.</p>
 <p></p>
