--- a/index.html
+++ b/index.html
@@ -1,26 +1,132 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- HTML Codes by Quackit.com -->
-<title>
-Max Robinson</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
-h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Helvetica, sans-serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
+:root {
+  --theme: #1f3694;
+  --highlight: #69941f;
+  --text: #ffffff;
+  --background: #f2f2f2;
+}
+@font-face {
+  font-family: 'Montserrat';
+  src: url("Montserrat-Variable.ttf") format("truetype");
+}
+
+body {
+  margin: 0;
+  font-family: Montserrat, Helvetica, sans-serif;
+  font-weight: 500;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: var(--theme);
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: var(--background);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: var(--theme);
+  color: var(--highlight);
+}
+
+.topnav a.active {
+  background-color: var(--highlight);
+  color: black;
+}
+
+.topnav .icon {
+  display: none;
+  height: 20px;
+  width: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    display: inline;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 </style>
+<link rel="icon" href="favicon.ico">
+<title>Max Robinson</title>
 </head>
 <body>
-<h1>Max Robinson</h1>
-<p>If you were linked here from a business card:</p>
-<p>Thanks for using my card!  If your card has a metal connector on it, read on for a description of how to use the advanced features of your card.</p>
-<p></p>
-<p>If you're just here for my contact info, here's a virtual contact card (sorry for not just having my contact info here on the page but it causes spam calls for me).</p>
-<p><a href="maxrobinson.vcf">Download .vcf</a></p>
-<p></p>
-<p>If anything about the card you received seems cool and you'd like to discuss the more advanced features, just let me know and I'll be happy to talk to you about it or send you a fully populated board if you don't have one already.</p>
-<p></p>
-<p>-Max</p>
+
+<div class="topnav" id="myTopnav">
+  <a href="index.html" class="active">Home</a>
+  <a href="services.html">Services</a>
+  <a href="cards.html">Cards</a>
+  <a href="portfolio.html">Portfolio</a>
+  <a href="about.html">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="makeResponsive()">
+    <svg viewBox="0 0 448 512" fill="currentColor">
+      <path fill="currentColor" d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z">
+    </svg>
+  </a>
+</div>
+
+<div style="padding-left:16px">
+  <h1>Max Robinson</h1>
+  
+  <p>Thanks for taking a look at my website!  It's still under development, so apologies for that.  I mainly do embedded firmware and PCB design, if you think you could use my services for anything, please reach out.  If you do have a card from me and want to learn more about it, please enter the board ID to go the the specific page for documentation and user guides as applicable.  I'm happy to chat about any designs of mine, so please reach out.  My virtual contact card is linked below to reduce spam from webscrapers.</p>
+  
+  <a href="maxrobinson.vcf" download><button type="button" id="vcf">My .vcf</button></a>
+  
+  
+  <h2>If you have a card from me</h2>
+  <p><form onsubmit="linkBoard(); return false;">
+  <label for="board">Enter a board ID (if autofilled just continue):</label>
+  <input id="board" name="board" type="text" autocomplete="off" spellcheck="false" placeholder=" " title="Board ID is the text in a box on the card you have" required>
+  <button type="submit" id="goboard">Go to board page</button></form></p>
+</div>
+
+<script>
+
+(new URL(window.location.href)).searchParams.forEach((x, y) =>
+    document.getElementById(y).value = x)
+    
+function linkBoard() {
+  const boardid = document.getElementById("board").value.toLowerCase();
+  window.location.href = "example.com";
+}
+
+function makeResponsive() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+
+</script>
+
 </body>
 </html>
