--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@ body {
 <div style="padding-left:16px">
   <h1>Portfolio</h1>
   
-  <p>Currently under design.  Check <a href="https:12voltman.github.com">my Github</a> for a non-exhaustive list of projects I've made.</p>
+  <p>Currently under design.  Check <a href="https://12voltman.github.com">my Github</a> for a non-exhaustive list of projects I've made.</p>
   <p>(Please note I do not use git often, so this is not representative of current or all work.)</p>
   
 </div>
