--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@ body {
 
 <div style="padding-left:16px">
   <h1>About</h1>
-  <img src="headshot.jpg" alt="Professional headshot of Max Robinson">
+  <img src="headshot.jpg" alt="Professional headshot of Max Robinson" style='height: 50%; width: 80%; object-fit: contain'>
   <p>For the last decade I've been designing electronics and writing code.  Ever since then I've been working to find a place in this field, and I'm always looking for the next challenge.</p>
   <p>As far as my background, I was brought up doing odd jobs for my dad's company and generally taking things apart to see how they work.  Apart from electronics, I also have experience with power generation (mainly gas fired turbines and combined cycle), electrical panel fabrication, welding, 3D modeling, 3D printing, scuba diving, rope access work at heights, event planning, sales, and physics tutoring. These are probably irrelevant to whyever you're here, but the more you know.  Again, please reach out if you have any kind of projects or work in mind, or even if you don't.</p>
   <p>-Thanks, Max Robinson</p>
