--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@ body {
 <div style="padding-left:16px">
   <h1>Max Robinson</h1>
   
-  <p>Thanks for taking a look at my website!  It's still under development, so apologies for that.  I mainly do embedded firmware and PCB design, if you think you could use my services for anything, please reach out.  If you do have a card from me and want to learn more about it, please enter the board ID to go the the specific page for documentation and user guides as applicable.  I'm happy to chat about any designs of mine, so please reach out.  My virtual contact card is linked below to reduce spam from webscrapers.</p>
+  <p>Thanks for taking a look at my website!  It's still under development, so apologies for that.  I mainly do embedded firmware and PCB design, if you think you could use my services for anything, please reach out.  If you do have a card from me and want to learn more about it, please enter the board ID to go the the specific page for documentation and user guides as applicable.  I'm happy to chat about any designs of mine, so please reach out.  My virtual contact card and resume are linked below to reduce spam from webscrapers.</p>
   
   <a href="maxrobinson.vcf" download><button type="button" id="vcf">My .vcf</button></a>
+  <a href="Resume-MaxRobinson2024-06-01.pdf" download><button type="button" id="resume">My resume (.pdf)</button></a>
   
   
   <h2>If you have a card from me</h2>
