--- a/hand.html
+++ b/hand.html
@@ -5,13 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NFC Hand Scan</title>
   <style>
+    /* Embed Comic Neue (fallback) from local root */
+    @font-face {
+      font-family: 'Comic Neue';
+      src: url('comic-neue-regular.ttf') format('ttf');
+      font-weight: 400;
+      font-style: normal;
+    }
+    @font-face {
+      font-family: 'Comic Neue';
+      src: url('comic-neue-bold.ttf') format('ttf');
+      font-weight: 700;
+      font-style: normal;
+    }
+
     body, html {
       margin: 0;
       padding: 0;
       width: 100%; height: 100%;
       display: flex; justify-content: center; align-items: center;
       background: #f0f0f0; overflow: hidden;
-      font-family: sans-serif;
+      font-family: "Comic Sans MS", 'Comic Neue', cursive, sans-serif;
     }
     .container { position: relative; width: 300px; height: 500px; }
     .hand { position: absolute; top: 5%; left: 50%; transform: translateX(-50%); width: 200px; height: auto; }
@@ -19,10 +33,29 @@
     .buttons { position: absolute; bottom: 10%; left: 50%; width: 200px; height: 200px; transform: translateX(-50%); }
     .buttons svg path { cursor: pointer; transition: fill 0.2s; stroke: #000; stroke-width: 2; }
     .buttons svg path:hover { fill: #ddd; }
-    .buttons svg text { fill: #333; font-family: "Comic Sans MS", cursive, sans-serif; pointer-events: none; }
-    .circle-text { position: absolute; bottom: 5%; left: 50%; width: 260px; height: 260px; transform: translateX(-50%) rotate(0deg); animation: rotateText 10s linear infinite; pointer-events: none; font-family: "Comic Sans MS", cursive, sans-serif; }
-    @keyframes rotateText { from { transform: translateX(-50%) rotate(0deg); } to { transform: translateX(-50%) rotate(360deg); } }
-    .circle-text svg text { font-size: 16px; fill: #333; font-family: inherit; }
+    .buttons svg text {
+      fill: #333;
+      font-family: "Comic Sans MS", 'Comic Neue', cursive, sans-serif;
+      pointer-events: none;
+    }
+    .circle-text {
+      position: absolute; bottom: 5%; left: 50%;
+      width: 260px; height: 260px;
+      transform: translateX(-50%) rotate(0deg);
+      animation: rotateText 10s linear infinite;
+      pointer-events: none;
+      font-family: "Comic Sans MS", 'Comic Neue', cursive, sans-serif;
+      font-weight: bold;
+    }
+    @keyframes rotateText {
+      from { transform: translateX(-50%) rotate(0deg); }
+      to { transform: translateX(-50%) rotate(360deg); }
+    }
+    .circle-text svg text {
+      font-size: 16px;
+      fill: #333;
+      font-family: inherit;
+    }
   </style>
 </head>
 <body>
